<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblack"
    tools:context=".playersActivity.PlayersActivity">

    <TextView
        android:id="@+id/playersSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/playersSectionTitleDefaultText"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchPlayerEditText"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:ems="15"
        android:hint="@string/searchPlayerEditTextHintDefault"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playersSectionTitle"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/searchPlayerButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_activity_button"
        android:text="@string/searchPlayerButtonDefaultText"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/searchPlayerEditText"
        app:layout_constraintTop_toBottomOf="@+id/searchPlayerEditText"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/userNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/userNameTitleDefaultText"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPlayerButton" />

    <TextView
        android:id="@+id/userNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/userNameDisplayDefaultText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTitle" />

    <TextView
        android:id="@+id/playerStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/playerStatsDefaultText"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameDisplay" />

    <TextView
        android:id="@+id/noStatsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/noStatsDisplayDefaultText"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/playerStatsTreeRecyclerView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playerStatsTreeRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/playerStatsTitle"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerStatsTreeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/overwatchLogoImageBackButton"
        app:layout_constraintTop_toBottomOf="@+id/playerStatsTitle"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/recyclerview_playerstat_item" />

    <ImageView
        android:id="@+id/overwatchLogoImageBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/overwatch_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>