<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblack"
    tools:context=".mapsActivity.MapsActivity">

    <TextView
        android:id="@+id/rolesSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mapsSectionTitleDefaultText"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/mapNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mapNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mapNameTitleDefaultText"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mapNameDisplaySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rolesSectionTitle" />

    <Spinner
        android:id="@+id/mapNameDisplaySpinner"
        style="@style/SpinnerTheme"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/mapScreenshotImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapNameTitle"
        tools:listitem="@layout/spinner_item_layout" />

    <ImageView
        android:id="@+id/mapScreenshotImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/overwatch_logo"
        app:layout_constraintBottom_toTopOf="@+id/mapLocationTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapNameDisplaySpinner"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/mapLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapLocationTitleDefaultText"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mapLocationDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapScreenshotImageView" />

    <TextView
        android:id="@+id/mapLocationDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/mapLocationDisplayDefaultText"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/gameModeMapTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapLocationTitle" />

    <TextView
        android:id="@+id/gameModeMapTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameModeMapTitleDefaultText"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gameModeMapDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapLocationDisplay" />

    <TextView
        android:id="@+id/gameModeMapDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/gameModeMapDisplayDefaultText"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/overwatchLogoImageBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeMapTitle" />

    <ImageView
        android:id="@+id/overwatchLogoImageBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/overwatch_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeMapDisplay"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>